described KR-PCA for Kyber

--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -1000,7 +1000,7 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{ueno2022curse,
+@article{DBLP:journals/tches/UenoXTITH22,
   author       = {Rei Ueno and
                   Keita Xagawa and
                   Yutaro Tanaka and
@@ -1020,7 +1020,6 @@
   biburl       = {https://dblp.org/rec/journals/tches/UenoXTITH22.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
-
 
 @inproceedings{DBLP:conf/eurocrypt/BellareR94,
   author       = {Mihir Bellare and
@@ -1151,6 +1150,29 @@
   doi          = {10.1007/978-3-030-17656-3\_26},
   timestamp    = {Tue, 14 May 2019 13:57:20 +0200},
   biburl       = {https://dblp.org/rec/conf/eurocrypt/BaetuDHTV19.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/acns/Huguenin-Dumittan20,
+  author       = {Lo{\"{\i}}s Huguenin{-}Dumittan and
+                  Serge Vaudenay},
+  editor       = {Mauro Conti and
+                  Jianying Zhou and
+                  Emiliano Casalicchio and
+                  Angelo Spognardi},
+  title        = {Classical Misuse Attacks on {NIST} Round 2 {PQC} - The Power of Rank-Based
+                  Schemes},
+  booktitle    = {Applied Cryptography and Network Security - 18th International Conference,
+                  {ACNS} 2020, Rome, Italy, October 19-22, 2020, Proceedings, Part {I}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {12146},
+  pages        = {208--227},
+  publisher    = {Springer},
+  year         = {2020},
+  url          = {https://doi.org/10.1007/978-3-030-57808-4\_11},
+  doi          = {10.1007/978-3-030-57808-4\_11},
+  timestamp    = {Thu, 27 Aug 2020 11:52:14 +0200},
+  biburl       = {https://dblp.org/rec/conf/acns/Huguenin-Dumittan20.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
